--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: Personal Library for Analytics and Machine Learning
 License: Private
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
