Documented al mplots help functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,15 @@ export(ip_country)
 export(iter_seeds)
 export(loglossBinary)
 export(mae)
+export(mplot_cuts)
+export(mplot_cuts_error)
+export(mplot_density)
+export(mplot_full)
+export(mplot_importance)
+export(mplot_lineal)
+export(mplot_metrics)
+export(mplot_roc)
+export(mplot_splits)
 export(mse)
 export(msplit)
 export(nas)
