More helpers created

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(export_results)
 export(formatNum)
 export(freqs)
 export(get_credentials)
+export(get_stocks)
+export(get_stocks_hist)
 export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_text_customs)
@@ -22,6 +24,7 @@ export(ip_country)
 export(iter_seeds)
 export(loglossBinary)
 export(mae)
+export(mailSend)
 export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
@@ -36,9 +39,20 @@ export(msplit)
 export(nas)
 export(normalize)
 export(one_hot_encoding_commas)
+export(portfolio_daily_plot)
+export(portfolio_distr_plot)
+export(portfolio_performance)
+export(queryDW)
+export(queryDummy)
 export(queryGA)
+export(queryProduc)
 export(readGS)
 export(rmse)
+export(stocks_daily_plot)
+export(stocks_hist_fix)
+export(stocks_performance)
+export(stocks_report)
+export(stocks_total_plot)
 export(updateLares)
 export(vector2text)
 export(writeGS)
