add packages to requires to simplify install

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,42 @@ License: Private
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
+Imports: httr,
+    jsonlite,
+    rlist,
+    ggplot2,
+    DALEX,
+    gridextra,
+    reshape2,
+    dplyr,
+    googlesheets,
+    googleAuthR,
+    googleAnalyticsR,
+    RJSONIO,
+    jpeg,
+    png,
+    config,
+    mailR,
+    H2O,
+    pROC,
+    scales,
+    plotly,
+    lubridate,
+    stringr,
+    VIM,
+    rvest,
+    funModeling,
+    RPostgreSQL,
+    rdrop2,
+    xlsx,
+    plyr,
+    anytime,
+    SnowballC,
+    wordcloud,
+    RColorBrewer,
+    rtweet,
+    rtypeform,
+    devtools,
+    magick,
+    opencv
+Remotes: ropenscilabs/opencv
