--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(dist2d)
 export(export_results)
 export(formatNum)
 export(freqs)
+export(geoStratum)
+export(geodataAddress)
 export(get_credentials)
 export(get_stocks)
 export(get_stocks_hist)
