--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,8 +43,7 @@ Imports: httr,
     RColorBrewer,
     rtweet,
     rtypeform,
-    devtools,
-    magick
+    devtools
 Remotes: ropenscilabs/opencv
 URL: https://github.com/laresbernardo/lares
 BugReports: https://github.com/laresbernardo/lares/issues
