Facial recognition functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,13 @@ export(dalex_variable)
 export(dist2d)
 export(export_results)
 export(formatNum)
+export(fr_compare)
+export(fr_facecounter)
+export(fr_getresult)
+export(fr_live)
+export(fr_plotface)
+export(fr_sendimage)
+export(fr_takeselfie)
 export(freqs)
 export(geoStratum)
 export(geodataAddress)
