New missingness function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(iter_seeds)
 export(loglossBinary)
 export(mae)
 export(mailSend)
+export(missingness)
 export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
