Added plot_distr documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(msplit)
 export(nas)
 export(normalize)
 export(one_hot_encoding_commas)
+export(plot_distr)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
