New hubspot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(gg_fill_customs)
 export(gg_text_customs)
 export(h2o_automl)
 export(h2o_selectmodel)
+export(hs_contacts)
+export(hs_deals)
 export(ip_country)
 export(iter_seeds)
 export(loglossBinary)
