New forecast function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(stocks_hist_fix)
 export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
+export(time_forecast)
 export(updateLares)
 export(vector2text)
 export(writeGS)
