New Mean Absolute Percentage Error (MAPE) function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(iter_seeds)
 export(loglossBinary)
 export(mae)
 export(mailSend)
+export(mape)
 export(missingness)
 export(mplot_cuts)
 export(mplot_cuts_error)
