--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
 export(dist2d)
+export(errors)
 export(export_results)
 export(formatNum)
 export(fr_compare)
