New object_detection function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(mse)
 export(msplit)
 export(nas)
 export(normalize)
+export(object_detection)
 export(one_hot_encoding_commas)
 export(plot_distr)
 export(portfolio_daily_plot)
