Added f1_contacts function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dalex_variable)
 export(dist2d)
 export(errors)
 export(export_results)
+export(f1_contacts)
 export(formatNum)
 export(fr_compare)
 export(fr_facecounter)
