function name changed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dist2d)
 export(errors)
 export(export_results)
 export(f1_contacts)
+export(forecast_ml)
 export(formatNum)
 export(fr_compare)
 export(fr_facecounter)
@@ -72,7 +73,6 @@ export(stocks_hist_fix)
 export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
-export(time_forecast)
 export(updateLares)
 export(vector2text)
 export(writeGS)
