--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(bring_api)
 export(categ_reducer)
 export(categoryCounter)
 export(cleanText)
+export(corr)
+export(corr_var)
 export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
