New listfiles function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(hs_contacts)
 export(hs_deals)
 export(ip_country)
 export(iter_seeds)
+export(listfiles)
 export(loglossBinary)
 export(mae)
 export(mailSend)
