New corr_plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(categ_reducer)
 export(categoryCounter)
 export(cleanText)
 export(corr)
+export(corr_plot)
 export(corr_var)
 export(dalex_explainer)
 export(dalex_local)
