New forecast_arima function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(dist2d)
 export(errors)
 export(export_results)
 export(f1_contacts)
+export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
 export(fr_compare)
