--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ export(stocks_hist_fix)
 export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
+export(textCloud)
+export(typeform_download)
 export(updateLares)
 export(vector2text)
 export(writeGS)
