--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports: httr,
     wordcloud,
     RColorBrewer,
     rtweet,
-    devtools
+    devtools,
+    forecast
 Remotes: ropenscilabs/opencv
 URL: https://github.com/laresbernardo/lares
 BugReports: https://github.com/laresbernardo/lares/issues
