New replace function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(queryDummy)
 export(queryGA)
 export(queryProduc)
 export(readGS)
+export(replace)
 export(rmse)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
