Changed replaceall function's name. Previous name masekd ‘package:base’

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,7 +72,7 @@ export(queryDummy)
 export(queryGA)
 export(queryProduc)
 export(readGS)
-export(replace)
+export(replaceall)
 export(rmse)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
