New removecols and removerows functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,8 @@ export(queryDummy)
 export(queryGA)
 export(queryProduc)
 export(readGS)
+export(removenacols)
+export(removenarows)
 export(replaceall)
 export(rmse)
 export(stocks_daily_plot)
