--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(mse)
 export(msplit)
 export(nas)
 export(normalize)
+export(numerical)
 export(object_detection)
 export(one_hot_encoding_commas)
 export(plot_distr)
