Separated report_html function as a new one

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(replaceall)
 export(rmse)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
+export(stocks_html)
 export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
