Object oriented functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(rmse)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
 export(stocks_html)
+export(stocks_objects)
 export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
