--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,9 @@ Imports: httr,
     RColorBrewer,
     rtweet,
     devtools,
-    forecast
+    forecast,
+    kableExtra,
+    rmarkdown
 Remotes: ropenscilabs/opencv
 URL: https://github.com/laresbernardo/lares
 BugReports: https://github.com/laresbernardo/lares/issues
