dateformat new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
+export(dateformat)
 export(dist2d)
 export(errors)
 export(export_results)
@@ -61,7 +62,7 @@ export(mse)
 export(msplit)
 export(nas)
 export(normalize)
-export(numerical)
+export(numericalonly)
 export(object_detection)
 export(one_hot_encoding_commas)
 export(plot_distr)
