New Pass Through a dplyr's Pipeline function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(normalize)
 export(numericalonly)
 export(object_detection)
 export(one_hot_encoding_commas)
+export(pass)
 export(plot_distr)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
