categ_reducer improved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(mplot_roc)
 export(mplot_splits)
 export(mse)
 export(msplit)
+export(myip)
 export(nas)
 export(normalize)
 export(numericalonly)
