New H2O prediction functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_text_customs)
 export(h2o_automl)
+export(h2o_predict_MOJO)
+export(h2o_predict_binary)
 export(h2o_selectmodel)
 export(hs_contacts)
 export(hs_deals)
