--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Analytics, Data Mining & Machine Learning Library
 Version: 4.1
 Author: Bernardo Lares
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
-Description: Personal Library for Analytics, Data Mining and Machine Learning Tasks
+Description: R Library for Analytics, Data Mining and Machine Learning Tasks
 License: Private
 Encoding: UTF-8
 LazyData: true
@@ -37,7 +37,6 @@ Suggests:
     anytime,
     DALEX,
     funModeling,
-    opencv,
     png,
     shiny,
     shinydashboard,
