New noPlot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(h2o_automl)
 export(h2o_predict_API)
 export(h2o_predict_MOJO)
 export(h2o_predict_binary)
+export(h2o_predict_model)
 export(h2o_selectmodel)
 export(hs_contacts)
 export(hs_deals)
@@ -65,6 +66,7 @@ export(mse)
 export(msplit)
 export(myip)
 export(nas)
+export(noPlot)
 export(normalize)
 export(numericalonly)
 export(object_detection)
