--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,3 +99,85 @@ export(vector2text)
 export(writeGS)
 export(year_month)
 export(year_week)
+import(SnowballC)
+import(dplyr)
+import(ggplot2)
+import(reshape2)
+import(rlist)
+importFrom(DBI,dbConnect)
+importFrom(DBI,dbDisconnect)
+importFrom(DBI,dbDriver)
+importFrom(DBI,dbSendQuery)
+importFrom(DBI,fetch)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(beepr,beep)
+importFrom(config,get)
+importFrom(corrplot,corrplot)
+importFrom(devtools,install)
+importFrom(devtools,install_github)
+importFrom(forecast,Arima)
+importFrom(forecast,auto.arima)
+importFrom(forecast,forecast)
+importFrom(ggrepel,geom_label_repel)
+importFrom(ggrepel,geom_text_repel)
+importFrom(googleAnalyticsR,google_analytics)
+importFrom(googleAuthR,gar_auth)
+importFrom(googlesheets,gs_auth)
+importFrom(googlesheets,gs_edit_cells)
+importFrom(googlesheets,gs_read)
+importFrom(googlesheets,gs_title)
+importFrom(gridExtra,grid.arrange)
+importFrom(h2o,as.h2o)
+importFrom(h2o,h2o.accuracy)
+importFrom(h2o,h2o.automl)
+importFrom(h2o,h2o.getModel)
+importFrom(h2o,h2o.init)
+importFrom(h2o,h2o.performance)
+importFrom(h2o,h2o.removeAll)
+importFrom(kableExtra,kable)
+importFrom(lubridate,date)
+importFrom(lubridate,day)
+importFrom(lubridate,dmy)
+importFrom(lubridate,dmy_hms)
+importFrom(lubridate,hour)
+importFrom(lubridate,minute)
+importFrom(lubridate,month)
+importFrom(lubridate,setdiff)
+importFrom(lubridate,wday)
+importFrom(lubridate,week)
+importFrom(lubridate,weeks)
+importFrom(lubridate,year)
+importFrom(lubridate,ymd)
+importFrom(lubridate,ymd_hms)
+importFrom(mailR,send.mail)
+importFrom(openxlsx,addWorksheet)
+importFrom(openxlsx,copyWorkbook)
+importFrom(openxlsx,loadWorkbook)
+importFrom(openxlsx,read.xlsx)
+importFrom(openxlsx,removeWorksheet)
+importFrom(openxlsx,renameWorksheet)
+importFrom(openxlsx,saveWorkbook)
+importFrom(openxlsx,sheets)
+importFrom(openxlsx,write.xlsx)
+importFrom(pROC,ci)
+importFrom(pROC,roc)
+importFrom(rdrop2,drop_auth)
+importFrom(rdrop2,drop_dir)
+importFrom(rdrop2,drop_download)
+importFrom(rdrop2,drop_search)
+importFrom(rdrop2,drop_upload)
+importFrom(rmarkdown,render)
+importFrom(rtweet,create_token)
+importFrom(rtweet,search_tweets)
+importFrom(scales,comma)
+importFrom(scales,percent)
+importFrom(stats,cor)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(utils,head)
+importFrom(utils,packageVersion)
+importFrom(utils,tail)
+importFrom(wordcloud,textplot)
+importFrom(wordcloud,wordlayout)
