--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,10 @@ Imports:
     config,
     corrplot,
     devtools,
+    dplyr,
     forecast,
     ggrepel,
+    ggplot2,
     googleAnalyticsR,
     googleAuthR,
     googlesheets,
@@ -23,6 +25,7 @@ Imports:
     h2o,
     kableExtra,
     knitr,
+    lubridate,
     mailR,
     openxlsx,
     pROC,
@@ -30,6 +33,7 @@ Imports:
     rdrop2,
     reshape2,
     rlist,
+    rJava,
     rmarkdown,
     RPostgreSQL,
     rtweet,
