--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(beepr,beep)
 importFrom(config,get)
 importFrom(corrplot,corrplot)
+importFrom(datasets,trees)
 importFrom(devtools,install)
 importFrom(devtools,install_github)
 importFrom(forecast,Arima)
@@ -126,6 +127,13 @@ importFrom(googlesheets,gs_auth)
 importFrom(googlesheets,gs_edit_cells)
 importFrom(googlesheets,gs_read)
 importFrom(googlesheets,gs_title)
+importFrom(grDevicesdev.off,graphics.off)
+importFrom(graphics,box)
+importFrom(graphics,hist)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,rasterImage)
+importFrom(graphics,rect)
 importFrom(gridExtra,grid.arrange)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.accuracy)
@@ -142,14 +150,12 @@ importFrom(lubridate,dmy_hms)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,month)
-importFrom(lubridate,setdiff)
 importFrom(lubridate,wday)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
-importFrom(mailR,send.mail)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,loadWorkbook)
@@ -171,13 +177,26 @@ importFrom(rtweet,create_token)
 importFrom(rtweet,search_tweets)
 importFrom(scales,comma)
 importFrom(scales,percent)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,dist)
+importFrom(stats,end)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,reorder)
 importFrom(stats,sd)
+importFrom(stats,start)
+importFrom(utils,URLencode)
+importFrom(utils,capture.output)
+importFrom(utils,data)
+importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
+importFrom(utils,write.table)
 importFrom(wordcloud,textplot)
 importFrom(wordcloud,wordlayout)
