--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,12 +120,14 @@ importFrom(forecast,auto.arima)
 importFrom(forecast,forecast)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
-importFrom(googleAnalyticsR,google_analytics)
 importFrom(googleAuthR,gar_auth)
 importFrom(googlesheets,gs_auth)
 importFrom(googlesheets,gs_edit_cells)
 importFrom(googlesheets,gs_read)
 importFrom(googlesheets,gs_title)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,graphics.off)
+importFrom(grDevices,png)
 importFrom(graphics,box)
 importFrom(graphics,hist)
 importFrom(graphics,plot)
@@ -136,11 +138,22 @@ importFrom(gridExtra,grid.arrange)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.accuracy)
 importFrom(h2o,h2o.automl)
+importFrom(h2o,h2o.download_mojo)
+importFrom(h2o,h2o.download_pojo)
 importFrom(h2o,h2o.getModel)
 importFrom(h2o,h2o.init)
+importFrom(h2o,h2o.loadModel)
+importFrom(h2o,h2o.no_progress)
 importFrom(h2o,h2o.performance)
+importFrom(h2o,h2o.predict)
+importFrom(h2o,h2o.predict_json)
 importFrom(h2o,h2o.removeAll)
+importFrom(h2o,h2o.saveModel)
+importFrom(h2o,h2o.varimp)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(kableExtra,kable)
+importFrom(lubridate,"%m+%")
 importFrom(lubridate,date)
 importFrom(lubridate,day)
 importFrom(lubridate,dmy)
@@ -170,6 +183,16 @@ importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
+importFrom(recipes,all_nominal)
+importFrom(recipes,all_numeric)
+importFrom(recipes,all_outcomes)
+importFrom(recipes,prep)
+importFrom(recipes,recipe)
+importFrom(recipes,step_dummy)
+importFrom(recipes,step_meanimpute)
+importFrom(recipes,step_modeimpute)
+importFrom(recipes,step_num2factor)
+importFrom(recipes,step_scale)
 importFrom(rmarkdown,render)
 importFrom(rtweet,create_token)
 importFrom(rtweet,search_tweets)
@@ -192,6 +215,7 @@ importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
