Changed plot_distr name to distr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dalex_residuals)
 export(dalex_variable)
 export(dateformat)
 export(dist2d)
+export(distr)
 export(errors)
 export(export_results)
 export(f1_contacts)
@@ -72,7 +73,6 @@ export(numericalonly)
 export(object_detection)
 export(one_hot_encoding_commas)
 export(pass)
-export(plot_distr)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
