First time with: 0 errors | 0 warnings | 0 notes. 'lares' is CRAN ready!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
 export(dateformat)
+export(dfInfo)
 export(dist2d)
 export(distr)
 export(errors)
@@ -207,6 +208,7 @@ importFrom(utils,download.file)
 importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,object.size)
 importFrom(utils,packageVersion)
 importFrom(utils,remove.packages)
 importFrom(utils,tail)
