--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     RColorBrewer,
     rdrop2,
     reshape2,
+    rlang,
     rlist,
     rJava,
     rmarkdown,
@@ -46,6 +47,7 @@ Suggests:
     DALEX,
     funModeling,
     googleAnalyticsR,
+    ipify,
     plotly,
     shiny,
     shinydashboard,
