xml2 dependency on read_html fixed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,10 +38,12 @@ Imports:
     rmarkdown,
     RPostgreSQL,
     rtweet,
+    rvest,
     scales,
     SnowballC,
     tidyverse,
-    wordcloud
+    wordcloud,
+    xml2
 Suggests:
     anytime,
     DALEX,
