--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,8 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(quantmod,getDividends)
+importFrom(quantmod,getSymbols)
 importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
