New plot_timeline function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(numericalonly)
 export(object_detection)
 export(one_hot_encoding_commas)
 export(pass)
+export(plot_timeline)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
