--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(df_str)
 export(dist2d)
 export(distr)
 export(errors)
+export(export_plot)
 export(export_results)
 export(f1_contacts)
 export(forecast_arima)
