--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(noPlot)
 export(normalize)
 export(numericalonly)
 export(object_detection)
+export(ohe)
 export(one_hot_encoding_commas)
 export(pass)
 export(plot_timeline)
