Lots of improvements everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(utils,object.size)
 importFrom(utils,packageVersion)
 importFrom(utils,remove.packages)
 importFrom(utils,tail)
+importFrom(utils,type.convert)
 importFrom(utils,write.table)
 importFrom(wordcloud,textplot)
 importFrom(wordcloud,wordlayout)
