Maintenance and little improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(plot_timeline)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
+export(quants)
 export(queryDW)
 export(queryDummy)
 export(queryGA)
