--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,8 @@ export(hs_contacts)
 export(hs_deals)
 export(ip_country)
 export(iter_seeds)
+export(li_auth)
+export(li_profile)
 export(listfiles)
 export(loglossBinary)
 export(mae)
