Feature intelligence for date/time variables Added to ohe as well

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
+export(date_feats)
 export(dateformat)
 export(df_str)
 export(dist2d)
@@ -46,6 +47,7 @@ export(h2o_predict_binary)
 export(h2o_predict_model)
 export(h2o_selectmodel)
 export(h2o_update)
+export(holidays)
 export(hs_contacts)
 export(hs_deals)
 export(ip_country)
@@ -168,6 +170,7 @@ importFrom(lubridate,dmy_hms)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,month)
+importFrom(lubridate,second)
 importFrom(lubridate,wday)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
