--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,12 @@ importFrom(rdrop2,drop_upload)
 importFrom(rmarkdown,render)
 importFrom(rtweet,create_token)
 importFrom(rtweet,search_tweets)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_attrs)
+importFrom(rvest,html_node)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
+importFrom(rvest,html_text)
 importFrom(scales,comma)
 importFrom(scales,percent)
 importFrom(stats,complete.cases)
@@ -225,3 +231,4 @@ importFrom(utils,type.convert)
 importFrom(utils,write.table)
 importFrom(wordcloud,textplot)
 importFrom(wordcloud,wordlayout)
+importFrom(xml2,read_html)
