--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,12 @@ importFrom(h2o,h2o.predict_json)
 importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.saveModel)
 importFrom(h2o,h2o.varimp)
+importFrom(httr,GET)
+importFrom(httr,POST)
+importFrom(httr,oauth1.0_token)
+importFrom(httr,oauth_app)
+importFrom(httr,oauth_endpoint)
+importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(kableExtra,kable)
@@ -220,6 +226,7 @@ importFrom(utils,URLencode)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,download.file)
+importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
