Fixed duplicates in plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,6 +173,7 @@ importFrom(lubridate,date)
 importFrom(lubridate,day)
 importFrom(lubridate,dmy)
 importFrom(lubridate,dmy_hms)
+importFrom(lubridate,floor_date)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,month)
