Added currency for OHSE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(freqs)
 export(geoStratum)
 export(geodataAddress)
 export(get_credentials)
+export(get_currency)
 export(get_stocks)
 export(get_stocks_hist)
 export(gg_colour_customs)
@@ -195,6 +196,8 @@ importFrom(openxlsx,sheets)
 importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
+importFrom(quantmod,getDividends)
+importFrom(quantmod,getSymbols)
 importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
