get_currency fixed for when getting only one !is.na value

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -197,6 +197,7 @@ importFrom(openxlsx,write.xlsx)
 importFrom(pROC,ci)
 importFrom(pROC,roc)
 importFrom(quantmod,getDividends)
+importFrom(quantmod,getQuote)
 importFrom(quantmod,getSymbols)
 importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_dir)
