ohe changed to ohse Fixed logic in get_stocks_hist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,7 @@ export(noPlot)
 export(normalize)
 export(numericalonly)
 export(object_detection)
-export(ohe)
+export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
 export(plot_timeline)
