Maintenance and little improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_stocks)
 export(get_stocks_hist)
 export(gg_colour_customs)
 export(gg_fill_customs)
+export(gg_pie)
 export(gg_text_customs)
 export(h2o_automl)
 export(h2o_predict_API)
