New json2string fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(hs_contacts)
 export(hs_deals)
 export(ip_country)
 export(iter_seeds)
+export(json2vector)
 export(li_auth)
 export(li_profile)
 export(listfiles)
