Better intro and statusbar added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ export(removenacols)
 export(removenarows)
 export(replaceall)
 export(rmse)
+export(statusbar)
 export(stocks_daily_plot)
 export(stocks_hist_fix)
 export(stocks_html)
@@ -232,6 +233,7 @@ importFrom(utils,URLencode)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,download.file)
+importFrom(utils,flush.console)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,install.packages)
