New left and right functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(hs_deals)
 export(ip_country)
 export(iter_seeds)
 export(json2vector)
+export(left)
 export(li_auth)
 export(li_profile)
 export(listfiles)
@@ -96,6 +97,7 @@ export(readGS)
 export(removenacols)
 export(removenarows)
 export(replaceall)
+export(right)
 export(rmse)
 export(statusbar)
 export(stocks_daily_plot)
