New theme_lares function for ggplot2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(stocks_performance)
 export(stocks_report)
 export(stocks_total_plot)
 export(textCloud)
+export(theme_lares)
 export(typeform_download)
 export(updateLares)
 export(vector2text)
