New importxlsx fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(h2o_update)
 export(holidays)
 export(hs_contacts)
 export(hs_deals)
+export(importxlsx)
 export(ip_country)
 export(iter_seeds)
 export(json2vector)
@@ -192,6 +193,7 @@ importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
+importFrom(openxlsx,getSheetNames)
 importFrom(openxlsx,loadWorkbook)
 importFrom(openxlsx,read.xlsx)
 importFrom(openxlsx,removeWorksheet)
