--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dalex_residuals)
 export(dalex_variable)
 export(date_feats)
 export(dateformat)
+export(db_file)
 export(df_str)
 export(dist2d)
 export(distr)
