--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ importFrom(graphics,points)
 importFrom(graphics,rasterImage)
 importFrom(graphics,rect)
 importFrom(gridExtra,grid.arrange)
+importFrom(gridExtra,tableGrob)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.accuracy)
 importFrom(h2o,h2o.automl)
