--- a/NAMESPACE
+++ b/NAMESPACE
@@ -236,6 +236,7 @@ importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,start)
+importFrom(stringr,str_locate_all)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
 importFrom(utils,data)
