Little improvements for GS fxs and stokcs report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ export(object_detection)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
+export(plot_survey)
 export(plot_timeline)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
