--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,8 @@ export(dalex_residuals)
 export(dalex_variable)
 export(date_feats)
 export(dateformat)
-export(db_file)
+export(db_download)
+export(db_upload)
 export(df_str)
 export(dist2d)
 export(distr)
