Index fxs and new mmetrics fx for classification models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(mae)
 export(mailSend)
 export(mape)
 export(missingness)
+export(mmetrics)
 export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
