--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,8 +50,8 @@ Imports:
 Suggests:
     anytime,
     caret,
+    cronR,
     DALEX,
-    funModeling,
     googleAnalyticsR,
     gtrendsR,
     plotly,
