--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(bring_api)
 export(categ_reducer)
 export(categoryCounter)
 export(cleanText)
+export(clusterKmeans)
 export(corr)
 export(corr_plot)
 export(corr_var)
@@ -231,6 +232,7 @@ importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dist)
 importFrom(stats,end)
+importFrom(stats,kmeans)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
@@ -239,6 +241,7 @@ importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,start)
+importFrom(stats,var)
 importFrom(stringr,str_locate_all)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
