--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(fr_plotface)
 export(fr_sendimage)
 export(fr_takeselfie)
 export(freqs)
+export(geoGrid)
 export(geoStratum)
 export(geodataAddress)
 export(get_credentials)
@@ -217,6 +218,7 @@ importFrom(rdrop2,drop_dir)
 importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
+importFrom(rgdal,project)
 importFrom(rmarkdown,render)
 importFrom(rtweet,create_token)
 importFrom(rtweet,search_tweets)
@@ -228,6 +230,10 @@ importFrom(rvest,html_table)
 importFrom(rvest,html_text)
 importFrom(scales,comma)
 importFrom(scales,percent)
+importFrom(sp,"coordinates<-")
+importFrom(sp,"proj4string<-")
+importFrom(sp,coordinates)
+importFrom(sp,over)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dist)
