--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Imports:
     RColorBrewer,
     rdrop2,
     reshape2,
+    rgdal,
     rlang,
     rlist,
     rJava,
@@ -43,6 +44,7 @@ Imports:
     scales,
     skimr,
     SnowballC,
+    sp,
     stringr,
     tidyr,
     wordcloud,
