--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ importFrom(sp,"coordinates<-")
 importFrom(sp,"proj4string<-")
 importFrom(sp,coordinates)
 importFrom(sp,over)
+importFrom(sp,proj4string)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dist)
