Fix coords numerical system if needed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,6 +219,7 @@ importFrom(rdrop2,drop_download)
 importFrom(rdrop2,drop_search)
 importFrom(rdrop2,drop_upload)
 importFrom(rgdal,project)
+importFrom(rgdal,readOGR)
 importFrom(rmarkdown,render)
 importFrom(rtweet,create_token)
 importFrom(rtweet,search_tweets)
@@ -235,6 +236,7 @@ importFrom(sp,"proj4string<-")
 importFrom(sp,coordinates)
 importFrom(sp,over)
 importFrom(sp,proj4string)
+importFrom(sp,spTransform)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
 importFrom(stats,dist)
