--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(object_detection)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
+export(plotMap)
 export(plot_survey)
 export(plot_timeline)
 export(portfolio_daily_plot)
