--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(date_feats)
 export(dateformat)
 export(db_download)
 export(db_upload)
+export(deg2num)
 export(df_str)
 export(dist2d)
 export(distr)
