--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,9 +36,9 @@ export(fr_plotface)
 export(fr_sendimage)
 export(fr_takeselfie)
 export(freqs)
+export(geoAddress)
 export(geoGrid)
 export(geoStratum)
-export(geodataAddress)
 export(get_credentials)
 export(get_currency)
 export(get_stocks)
