Rename fx plotMap into geoMap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(fr_takeselfie)
 export(freqs)
 export(geoAddress)
 export(geoGrid)
+export(geoMap)
 export(geoStratum)
 export(get_credentials)
 export(get_currency)
@@ -91,7 +92,6 @@ export(object_detection)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
-export(plotMap)
 export(plot_survey)
 export(plot_timeline)
 export(portfolio_daily_plot)
