New model metrics and clasif models with more than 2 cats logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,7 +71,7 @@ export(mae)
 export(mailSend)
 export(mape)
 export(missingness)
-export(mmetrics)
+export(model_metrics)
 export(mplot_cuts)
 export(mplot_cuts_error)
 export(mplot_density)
