--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(queryDW)
 export(queryDummy)
 export(queryGA)
 export(queryProduc)
+export(quiet)
 export(readGS)
 export(removenacols)
 export(removenarows)
