--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(h2o_predict_binary)
 export(h2o_predict_model)
 export(h2o_selectmodel)
 export(h2o_update)
+export(haveInternet)
 export(holidays)
 export(hs_contacts)
 export(hs_deals)
