--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,9 +95,11 @@ export(one_hot_encoding_commas)
 export(pass)
 export(plot_survey)
 export(plot_timeline)
+export(portfolio_daily)
 export(portfolio_daily_plot)
 export(portfolio_distr_plot)
 export(portfolio_performance)
+export(portfolio_total_plot)
 export(quants)
 export(queryDW)
 export(queryDummy)
