--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,8 @@ export(stocks_report)
 export(stocks_total_plot)
 export(textCloud)
 export(theme_lares)
+export(trendsRelated)
+export(trendsTime)
 export(typeform_download)
 export(updateLares)
 export(vector2text)
