New theme and fix return for distr and freqs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(stocks_report)
 export(stocks_total_plot)
 export(textCloud)
 export(theme_lares)
+export(theme_lares2)
 export(trendsRelated)
 export(trendsTime)
 export(typeform_download)
