Better theme_lares2() structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,graphics.off)
 importFrom(grDevices,png)
 importFrom(graphics,box)
+importFrom(graphics,grid)
 importFrom(graphics,hist)
 importFrom(graphics,plot)
 importFrom(graphics,points)
