Transparency for theme_lares2() and added pipe fx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
+importFrom(magrittr,"%>%")
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,getSheetNames)
