--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(vector2text)
 export(writeGS)
 export(year_month)
 export(year_week)
+export(zerovar)
 import(SnowballC)
 import(dplyr)
 import(ggplot2)
