New crosstab function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(clusterKmeans)
 export(corr)
 export(corr_plot)
 export(corr_var)
+export(crosstab)
 export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
@@ -260,6 +261,7 @@ importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,start)
 importFrom(stats,var)
+importFrom(stats,xtabs)
 importFrom(stringr,str_locate_all)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
