--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,8 @@ export(object_detection)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
+export(plot_chord)
+export(plot_palette)
 export(plot_survey)
 export(plot_timeline)
 export(portfolio_daily)
@@ -145,6 +147,11 @@ importFrom(DBI,dbSendQuery)
 importFrom(DBI,fetch)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(beepr,beep)
+importFrom(circlize,CELL_META)
+importFrom(circlize,chordDiagram)
+importFrom(circlize,circos.text)
+importFrom(circlize,circos.track)
+importFrom(circlize,uh)
 importFrom(config,get)
 importFrom(corrplot,corrplot)
 importFrom(devtools,install)
