Chords integration with distr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(importxlsx)
 export(ip_country)
 export(iter_seeds)
 export(json2vector)
+export(lares_pal)
 export(left)
 export(li_auth)
 export(li_profile)
