--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(corr)
 export(corr_plot)
 export(corr_var)
 export(crosstab)
+export(crossval)
 export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
