Supressed facial recognition fxs and improved wordcloud

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,13 +29,6 @@ export(f1_contacts)
 export(forecast_arima)
 export(forecast_ml)
 export(formatNum)
-export(fr_compare)
-export(fr_facecounter)
-export(fr_getresult)
-export(fr_live)
-export(fr_plotface)
-export(fr_sendimage)
-export(fr_takeselfie)
 export(freqs)
 export(geoAddress)
 export(geoGrid)
@@ -91,7 +84,6 @@ export(nas)
 export(noPlot)
 export(normalize)
 export(numericalonly)
-export(object_detection)
 export(ohse)
 export(one_hot_encoding_commas)
 export(pass)
@@ -136,7 +128,6 @@ export(writeGS)
 export(year_month)
 export(year_week)
 export(zerovar)
-import(SnowballC)
 import(dplyr)
 import(ggplot2)
 import(reshape2)
@@ -271,6 +262,10 @@ importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
 importFrom(stringr,str_locate_all)
+importFrom(tm,Corpus)
+importFrom(tm,TermDocumentMatrix)
+importFrom(tm,content_transformer)
+importFrom(tm,tm_map)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
 importFrom(utils,data)
@@ -287,5 +282,6 @@ importFrom(utils,tail)
 importFrom(utils,type.convert)
 importFrom(utils,write.table)
 importFrom(wordcloud,textplot)
+importFrom(wordcloud,wordcloud)
 importFrom(wordcloud,wordlayout)
 importFrom(xml2,read_html)
