New read.file and bindfiles fxs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,17 @@ Imports:
     config,
     corrplot,
     devtools,
+    data.table,
     dplyr,
     forecast,
+    foreign,
+    gdata,
     ggrepel,
     ggplot2,
     googleAuthR,
     googlesheets,
     gridExtra,
+    gtools,
     h2o,
     httr,
     jsonlite,
