--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ importFrom(stats,xtabs)
 importFrom(stringr,str_locate_all)
 importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
+importFrom(tm,VectorSource)
 importFrom(tm,content_transformer)
 importFrom(tm,tm_map)
 importFrom(utils,URLencode)
