--- a/NAMESPACE
+++ b/NAMESPACE
@@ -268,6 +268,10 @@ importFrom(tm,Corpus)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,VectorSource)
 importFrom(tm,content_transformer)
+importFrom(tm,removeNumbers)
+importFrom(tm,removePunctuation)
+importFrom(tm,stopwords)
+importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
 importFrom(utils,URLencode)
 importFrom(utils,capture.output)
