Better subtitles spacing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -270,6 +270,7 @@ importFrom(tm,VectorSource)
 importFrom(tm,content_transformer)
 importFrom(tm,removeNumbers)
 importFrom(tm,removePunctuation)
+importFrom(tm,removeWords)
 importFrom(tm,stopwords)
 importFrom(tm,stripWhitespace)
 importFrom(tm,tm_map)
