No old hubspot fxs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     quantmod,
     RColorBrewer,
     rdrop2,
+    readstata13,
     reshape2,
     rlang,
     rlist,
@@ -59,10 +60,12 @@ Suggests:
     anytime,
     caret,
     DALEX,
+    exifr,
     googleAnalyticsR,
     gtrendsR,
     highcharter,
     plotly,
+    plyr,
     shiny,
     shinydashboard,
     VIM 
