--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,6 @@ export(h2o_selectmodel)
 export(h2o_update)
 export(haveInternet)
 export(holidays)
-export(hs_contacts)
-export(hs_deals)
 export(importxlsx)
 export(ip_country)
 export(iter_seeds)
@@ -285,6 +283,7 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,object.size)
 importFrom(utils,packageVersion)
+importFrom(utils,read.table)
 importFrom(utils,remove.packages)
 importFrom(utils,tail)
 importFrom(utils,type.convert)
