--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(queryDummy)
 export(queryGA)
 export(queryProduc)
 export(quiet)
+export(rbind_full)
 export(read.file)
 export(readGS)
 export(removenacols)
@@ -281,6 +282,7 @@ importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,modifyList)
 importFrom(utils,object.size)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
