arrangeGrob on stocks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rasterImage)
 importFrom(graphics,rect)
+importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
 importFrom(gridExtra,tableGrob)
 importFrom(h2o,as.h2o)
